temporal-verifier/tests/examples/success/sorts/inference_ignore_sort.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s

assume exists x. x
