temporal-verifier/tests/examples/fail/sorts/uncalled.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s
mutable r(bool): s

assert forall x:s. r = x
